--- a/.github/workflows/seo-test.yml
+++ b/.github/workflows/seo-test.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Run Lighthouse SEO audit
-      run: npx playwright --no-headless --ignore-certificate-errors ./seo-test.js
+      run: npx playwright ./seo-test.js
       env:
         CI: true
     - name: Archive Lighthouse report
