--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,8 +1,6 @@
 name: Test and Generate Report
 
-on:
-  push:
-    branches: [ main ]
+on: [ push ]
 
 jobs:
   test:
@@ -15,13 +13,11 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
+          node-version: '18.x'
 
       - name: Install dependencies and build project
         run: |
-          npm install -g artillery
-          npm install -g artillery-plugin-playwright
-          npm install -g lighthouse
+          npm install
           npm ci
           npm run build
 
@@ -40,6 +36,5 @@ jobs:
       - name: Upload test results
         uses: actions/upload-artifact@v2
         with:
-          name: test-results
-          path: |
-            test-results/
+          name: lighthouse-results
+          path: test-report.html
