--- a/.github/workflows/handicap.yml
+++ b/.github/workflows/handicap.yml
@@ -10,10 +10,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: |
-          npm install @axe-core/puppeteer
-          npm install @playwright/test
-
+        run: npm install
       - name: Run accessibility test
         run: npx playwright test
 
