--- a/.github/workflows/handicap.yml
+++ b/.github/workflows/handicap.yml
@@ -10,7 +10,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          npx playwright install
       - name: Run accessibility test
         run: npx playwright test
 
