--- a/.github/workflows/seo-test.yml
+++ b/.github/workflows/seo-test.yml
@@ -14,7 +14,9 @@ jobs:
       with:
         node-version: 16.x
     - name: Install dependencies
-      run: npm install
+      run: |
+        npm install
+        npx playwright install
     - name: Run Lighthouse SEO audit
       run: npx playwright test
       env:
