--- a/.github/workflows/js_style.yml
+++ b/.github/workflows/js_style.yml
@@ -11,7 +11,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          npm install --save-dev semistandard
 
       - name: Run ESLint
         run: npx eslint .
