--- a/.github/workflows/js_style.yml
+++ b/.github/workflows/js_style.yml
@@ -11,9 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: |
-          npm install
-          npm install --save-dev semistandard
+        run: npm install
 
       - name: Run ESLint
         run: npx eslint .
