--- a/.github/workflows/js_style.yml
+++ b/.github/workflows/js_style.yml
@@ -14,7 +14,7 @@ jobs:
         run: npm install
 
       - name: Run ESLint
-        run: npx eslint .
+        run: npx eslint . --config .eslintrc.json --debug
 
       - name: Save ESLint results as artifact
         uses: actions/upload-artifact@v2
